--- a/notatki_cpp.vcxproj.filters
+++ b/notatki_cpp.vcxproj.filters
@@ -91,11 +91,26 @@
     <Filter Include="Pliki źródłowe\new_delete">
       <UniqueIdentifier>{47146846-78d1-4808-900b-5af152c0a54a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pliki źródłowe\oop">
-      <UniqueIdentifier>{cf4365b3-929a-4a93-a53c-0b62b49d948f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Pliki źródłowe\operators_overloading">
       <UniqueIdentifier>{6278c8ec-83f2-4ff6-854f-7cf7478d103a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\conversion_functions">
+      <UniqueIdentifier>{59875d1e-dbfd-44ec-a1b1-7ee1f5d0ffec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\data_types\special_types">
+      <UniqueIdentifier>{afba173a-d5c0-4f1a-86b2-ba127249821f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\class">
+      <UniqueIdentifier>{cf4365b3-929a-4a93-a53c-0b62b49d948f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\class\constructor">
+      <UniqueIdentifier>{8dab17f4-9010-4d7b-95a7-16b5cd72fa42}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\class\constructor_initializer_list">
+      <UniqueIdentifier>{94cbff49-5315-4650-b9fb-f46e958e5799}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\friend">
+      <UniqueIdentifier>{71d99f64-e8a4-428e-b6e3-95135f94b50b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -300,26 +315,17 @@
     <ClCompile Include="using_declaration_directive.cpp">
       <Filter>Pliki źródłowe\namespace</Filter>
     </ClCompile>
-    <ClCompile Include="constructor.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
-    </ClCompile>
     <ClCompile Include="function_overloading_ambigious.cpp">
       <Filter>Pliki źródłowe\functions</Filter>
     </ClCompile>
-    <ClCompile Include="class_constructor.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
-    </ClCompile>
-    <ClCompile Include="class_default_constructor.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
-    </ClCompile>
     <ClCompile Include="class_decstructor.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
+      <Filter>Pliki źródłowe\class</Filter>
     </ClCompile>
     <ClCompile Include="class_simple.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
+      <Filter>Pliki źródłowe\class</Filter>
     </ClCompile>
     <ClCompile Include="class_const_method.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
+      <Filter>Pliki źródłowe\class</Filter>
     </ClCompile>
     <ClCompile Include="extern_const.cpp">
       <Filter>Pliki źródłowe\storage_classes</Filter>
@@ -333,12 +339,6 @@
     <ClCompile Include="pointer_reference_value2.cpp">
       <Filter>Pliki źródłowe\references</Filter>
     </ClCompile>
-    <ClCompile Include="converting_constructor.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
-    </ClCompile>
-    <ClCompile Include="converting_constructor2.cpp">
-      <Filter>Pliki źródłowe\oop</Filter>
-    </ClCompile>
     <ClCompile Include="interfix_operator_overloading.cpp">
       <Filter>Pliki źródłowe\operators_overloading</Filter>
     </ClCompile>
@@ -347,6 +347,42 @@
     </ClCompile>
     <ClCompile Include="sufix_operator_overloading.cpp">
       <Filter>Pliki źródłowe\operators_overloading</Filter>
+    </ClCompile>
+    <ClCompile Include="conversion_implicit_explicit.cpp">
+      <Filter>Pliki źródłowe\conversion_functions</Filter>
+    </ClCompile>
+    <ClCompile Include="assignment_operator_overloading.cpp">
+      <Filter>Pliki źródłowe\operators_overloading</Filter>
+    </ClCompile>
+    <ClCompile Include="subscript_operator_overloading.cpp">
+      <Filter>Pliki źródłowe\operators_overloading</Filter>
+    </ClCompile>
+    <ClCompile Include="nullptr_t.cpp">
+      <Filter>Pliki źródłowe\data_types\special_types</Filter>
+    </ClCompile>
+    <ClCompile Include="constructor_initializer_list.cpp">
+      <Filter>Pliki źródłowe\class\constructor_initializer_list</Filter>
+    </ClCompile>
+    <ClCompile Include="constructors.cpp">
+      <Filter>Pliki źródłowe\class\constructor</Filter>
+    </ClCompile>
+    <ClCompile Include="constructors_explicit.cpp">
+      <Filter>Pliki źródłowe\class\constructor</Filter>
+    </ClCompile>
+    <ClCompile Include="copy_constructor_or_assignment.cpp">
+      <Filter>Pliki źródłowe\class</Filter>
+    </ClCompile>
+    <ClCompile Include="generated_non_generated_constructos.cpp">
+      <Filter>Pliki źródłowe\class\constructor</Filter>
+    </ClCompile>
+    <ClCompile Include="compatibility.cpp">
+      <Filter>Pliki źródłowe\class</Filter>
+    </ClCompile>
+    <ClCompile Include="virtual.cpp">
+      <Filter>Pliki źródłowe\class</Filter>
+    </ClCompile>
+    <ClCompile Include="virtual_destructor.cpp">
+      <Filter>Pliki źródłowe\class</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
