--- a/notatki_cpp.vcxproj.filters
+++ b/notatki_cpp.vcxproj.filters
@@ -384,5 +384,8 @@
     <ClCompile Include="virtual_destructor.cpp">
       <Filter>Pliki źródłowe\class</Filter>
     </ClCompile>
+    <ClCompile Include="friend_function.cpp">
+      <Filter>Pliki źródłowe\friend</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
