--- a/notatki_cpp.vcxproj.filters
+++ b/notatki_cpp.vcxproj.filters
@@ -121,6 +121,9 @@
     <Filter Include="Pliki źródłowe\function">
       <UniqueIdentifier>{ce5d640c-6f98-4e9a-b680-ff0298cdcb1b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Pliki źródłowe\class_templates\class_template_friend_functions">
+      <UniqueIdentifier>{d7c0d7f1-843b-4109-9e0b-11f525c6ebbd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="using_namespace.cpp">
@@ -437,6 +440,12 @@
     </ClCompile>
     <ClCompile Include="templates_parameters.cpp">
       <Filter>Pliki źródłowe\function_templates</Filter>
+    </ClCompile>
+    <ClCompile Include="class_template_automatic_type_deduction.cpp">
+      <Filter>Pliki źródłowe\class_templates</Filter>
+    </ClCompile>
+    <ClCompile Include="class_template_friend_functions.cpp">
+      <Filter>Pliki źródłowe\class_templates\class_template_friend_functions</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
